[package]
name = "warhelper-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = {version = "0.11.5", default-features = false, features = ["builder", "cache", "client", "gateway", "http", "model", "rustls_backend", "chrono"]}
tokio = "1.21.1"
mongodb = "2.3.0"
uuid = {version = "1.1.2", features = ["v5", "serde"]}
futures = "0.3.24"
chrono = "0.4.22"
serde = {version = "1.0.145", features = ["derive"]}